--- a/Tapper/Base.lproj/Main.storyboard
+++ b/Tapper/Base.lproj/Main.storyboard
@@ -24,13 +24,13 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tapper" translatesAutoresizingMaskIntoConstraints="NO" id="2Ni-5s-cFU" userLabel="logoImg">
                                 <rect key="frame" x="48" y="56" width="279" height="127"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="127" id="jcL-2X-Qil"/>
+                                    <constraint firstAttribute="height" constant="127" id="yV9-uM-STw"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G1q-xp-TNa" userLabel="playBtn">
                                 <rect key="frame" x="67" y="479" width="240" height="129"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="129" id="gnQ-GA-DWS"/>
+                                    <constraint firstAttribute="height" constant="129" id="EV5-hw-KBj"/>
                                 </constraints>
                                 <state key="normal" image="playbtn"/>
                                 <connections>
@@ -45,41 +45,44 @@
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1000 TAPS" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YwP-rC-GXJ" userLabel="tapsLbl">
                                 <rect key="frame" x="48" y="334" width="279" height="60"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="BkZ-nZ-XWJ"/>
+                                    <constraint firstAttribute="height" constant="60" id="jSo-e8-q81"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="30"/>
                                 <color key="textColor" red="0.9999127984046936" green="1" blue="0.99988144636154175" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7oc-oi-xGD" userLabel="tapBtn">
-                                <rect key="frame" x="112" y="56" width="157" height="161"/>
+                                <rect key="frame" x="81" y="56" width="219" height="160"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="161" id="It6-v0-n3z"/>
+                                    <constraint firstAttribute="height" constant="160" id="YFC-WD-pS4"/>
                                 </constraints>
                                 <state key="normal" image="coin"/>
+                                <connections>
+                                    <action selector="onCoinTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ibw-TL-B0u"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="IbE-X3-Hvg" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="7qK-7m-Ge2"/>
-                            <constraint firstItem="G1q-xp-TNa" firstAttribute="top" secondItem="jDB-Uy-sbV" secondAttribute="bottom" constant="24" id="Cg3-VN-WWO"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="jDB-Uy-sbV" secondAttribute="trailing" constant="59" id="Ev8-Ba-LcT"/>
-                            <constraint firstItem="IbE-X3-Hvg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="HYG-oH-6Rz"/>
-                            <constraint firstItem="2Ni-5s-cFU" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="32" id="KXg-Rq-yc2"/>
-                            <constraint firstItem="G1q-xp-TNa" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="51" id="KqD-5a-AcM"/>
-                            <constraint firstItem="jDB-Uy-sbV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="65" id="LV8-cJ-Ipu"/>
-                            <constraint firstAttribute="trailing" secondItem="IbE-X3-Hvg" secondAttribute="trailing" id="Q9G-4D-Fi0"/>
-                            <constraint firstItem="IbE-X3-Hvg" firstAttribute="centerX" secondItem="G1q-xp-TNa" secondAttribute="centerX" id="QPL-Lb-RRa"/>
-                            <constraint firstItem="7oc-oi-xGD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="96" id="SVl-Rv-nkY"/>
-                            <constraint firstItem="YwP-rC-GXJ" firstAttribute="centerX" secondItem="G1q-xp-TNa" secondAttribute="centerX" id="Xk8-YV-QOU"/>
-                            <constraint firstItem="2Ni-5s-cFU" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="36" id="dgH-3m-xye"/>
-                            <constraint firstItem="IbE-X3-Hvg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="fdG-Kh-RGd"/>
-                            <constraint firstItem="2Ni-5s-cFU" firstAttribute="leading" secondItem="YwP-rC-GXJ" secondAttribute="leading" id="jXR-3k-to4"/>
-                            <constraint firstItem="2Ni-5s-cFU" firstAttribute="top" secondItem="7oc-oi-xGD" secondAttribute="top" id="nLp-3s-Cqa"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="G1q-xp-TNa" secondAttribute="bottom" constant="59" id="pum-Lx-l34"/>
-                            <constraint firstItem="jDB-Uy-sbV" firstAttribute="top" secondItem="YwP-rC-GXJ" secondAttribute="bottom" constant="31" id="qra-RJ-IjV"/>
-                            <constraint firstItem="2Ni-5s-cFU" firstAttribute="trailing" secondItem="YwP-rC-GXJ" secondAttribute="trailing" id="rDP-wg-sRN"/>
-                            <constraint firstItem="7oc-oi-xGD" firstAttribute="centerX" secondItem="jDB-Uy-sbV" secondAttribute="centerX" id="wjA-0n-rco"/>
+                            <constraint firstAttribute="trailing" secondItem="IbE-X3-Hvg" secondAttribute="trailing" id="0Oo-Ao-cA8"/>
+                            <constraint firstItem="7oc-oi-xGD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="65" id="1KF-S1-bA9"/>
+                            <constraint firstItem="7oc-oi-xGD" firstAttribute="trailing" secondItem="jDB-Uy-sbV" secondAttribute="trailing" id="27I-iS-QEb"/>
+                            <constraint firstItem="YwP-rC-GXJ" firstAttribute="centerX" secondItem="G1q-xp-TNa" secondAttribute="centerX" id="3qI-u0-A5k"/>
+                            <constraint firstItem="IbE-X3-Hvg" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="4DG-Zi-etX"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="G1q-xp-TNa" secondAttribute="bottom" constant="59" id="9JK-To-gbr"/>
+                            <constraint firstItem="G1q-xp-TNa" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="51" id="DEx-Od-xDT"/>
+                            <constraint firstItem="2Ni-5s-cFU" firstAttribute="leading" secondItem="YwP-rC-GXJ" secondAttribute="leading" id="KZg-SL-yDJ"/>
+                            <constraint firstItem="jDB-Uy-sbV" firstAttribute="top" secondItem="YwP-rC-GXJ" secondAttribute="bottom" constant="31" id="QUx-o2-7wR"/>
+                            <constraint firstItem="IbE-X3-Hvg" firstAttribute="centerX" secondItem="G1q-xp-TNa" secondAttribute="centerX" id="RJu-g5-VAR"/>
+                            <constraint firstItem="7oc-oi-xGD" firstAttribute="leading" secondItem="jDB-Uy-sbV" secondAttribute="leading" id="XzP-M8-cht"/>
+                            <constraint firstItem="G1q-xp-TNa" firstAttribute="top" secondItem="jDB-Uy-sbV" secondAttribute="bottom" constant="24" id="aMZ-Lo-KAq"/>
+                            <constraint firstItem="2Ni-5s-cFU" firstAttribute="trailing" secondItem="YwP-rC-GXJ" secondAttribute="trailing" id="bcs-Gn-aD6"/>
+                            <constraint firstItem="2Ni-5s-cFU" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="32" id="eRF-Ce-Q4V"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="7oc-oi-xGD" secondAttribute="trailing" constant="59" id="hLk-hW-drZ"/>
+                            <constraint firstItem="IbE-X3-Hvg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="iUz-Jg-7Sj"/>
+                            <constraint firstItem="2Ni-5s-cFU" firstAttribute="top" secondItem="7oc-oi-xGD" secondAttribute="top" id="j8S-Fc-NHW"/>
+                            <constraint firstItem="2Ni-5s-cFU" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="36" id="jKz-vb-oEi"/>
+                            <constraint firstItem="IbE-X3-Hvg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="sTd-SL-IlS"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
